--- a/index.html
+++ b/index.html
@@ -6,15 +6,16 @@
 </head>
 
 <body>
+  <body style="background-color: darkcyan;"></body>
 
   <center><img src="img/01.jpg" alt="Example Image" width="400" height="500"/></center>
 
   <center><h1>My Wasinghon Pinwsies</h1></center>
   <center><h3>นายวสิงหล ปิ่นวิเศษ</h3></center>
-  <center><h3>ชื่อเล่น สิง อายุ20</h3></center>
-  <center><h3>My Wasinghon Pinwsies</h3></center>
-  <center><h3>My Wasinghon Pinwsies</h3></center>
-  <center><h3>My Wasinghon Pinwsies</h3></center>
+  <center><h3>ชื่อเล่น สิง อายุ 20</h3></center>
+  <center><h3>งานอดิเรก เล่นเกม เล่นบาส อ่านมังงะ ดูอนิเมะ</h3></center>
+  <center><h3>สถานศึกษามหาราชวิทยาลัย ราชมงคลสุวรรณภูมิ หันตรา</h3></center>
+  <center><h3>สาขาวิทยาศาสตร์และเทคโนโลยี มัตติมีเดีย</h3></center>
 <center><h4><a href="https://www.facebook.com/wasinghonpinw/">facebook</a></h4></center>
 <p>My First paragraph.</p>
 
