--- a/index.html
+++ b/index.html
@@ -7,78 +7,12 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Itim&display=swap" rel="stylesheet">
-</head> 
+  <title>Wasinghon Pinwsies</title>
+  <link rel = "stylesheet" href="style.css">
+</head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>ปุ่มลิงก์</title>
-<style>
-  .container {
-        width: 60%;
-        margin: auto;
-        background: rgba(54, 54, 54, 0.849);
-        padding: 20px;
-        box-shadow: 0 0 10px rgba(0, 0, 0, 0.041);
-        margin-top: 50px;
-    }
-  body {
-          color : rgb(255, 255, 255);
-       }
-       h1{
-        font-family: "Itim", cursive;
-  font-weight: 400;
-  font-style: normal;
-       }
-       h3{
-        font-family: "Itim", cursive;
-  font-weight: 400;
-  font-style: normal;
-       }
-       body {
-        background-image: url('img/02.jpg');
-        background-size: cover; /* ปรับขนาดรูปให้เต็มหน้าจอ */
-        background-position: center; /* จัดตำแหน่งรูป */
-        background-repeat: no-repeat; /* ป้องกันการซ้ำ */
-    }  
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Button และ Link</title>
-    <style>
-      .button {
-            display: inline-block;
-            padding: 10px 20px;
-            background-color: #fd0909;
-            color: white;
-            text-decoration: none; /* ลบเส้นใต้ */
-            border-radius: 5px;
-            font-size: 16px;
-            text-align: center;
-        }
-
-        .button:hover {
-            background-color: #fd0909;
-            /*ตาราง*/
-        }
-        table {
-            width: 100%;
-            border-collapse: collapse; /* รวมเส้นขอบ */
-            margin-top: 20px;
-        }
-
-        th, td {
-            border: 1px solid #ddd; /* เส้นขอบ */
-            text-align: left; /* จัดข้อความชิดซ้าย */
-            padding: 8px; /* ระยะห่างในเซลล์ */
-        }
-
-        th {
-            background-color: #4caf4f00;
-            color: rgb(255, 255, 255);
-        }
-
-        tr:nth-child(even) {
-            background-color: #f2f2f200; /* แถวที่เป็นเลขคู่ */
-        }
-</style>
 <body>
   <div class="container">
   <body style="background-color: darkcyan;"></body>
